2005-01-31  Gianluca Guida  <glguida@gmail.com>

	* pattern.c: New file.
	* stow.c: Likewise.
	* pattern.h: Likewise.
	* stow.h: Likewise.
	* Makefile (OBJS): Added pattern.o and stow.o

	* node.c: Initialize variable err.
	* lib.c (file_lookup): Initialize variable err.
	Include <fcntl.h>.
	(make_filepath, for_each_subdir, for_each_subdir_priv)
	(for_each_file_priv): New function.
	* lib.h (make_filepath, for_each_subdir, for_each_subdir_priv): New 
	declaration.
	* options.c: Include "pattern.h".
	Include "stow.h".
	(arg_common_options): Added entries for OPT_STOW and OPT_PATTERN.
	(argp_parse_common_options): Handle OPT_STOW and OPT_PATTERN case.
	* options.h (OPT_PATTERN, OPT_STOW, OPT_LONG_PATTERN, OPT_LONG_STOW): 
	New declarations.
	
2003-07-05  Jeroen Dekkers  <jeroen@dekkers.cx>

	* Makefile: Rewrite.

	* netfs.c (netfs_attempt_create_file): Unlock DIR.
	(netfs_attempt_mkfile): Likewise.

2002-12-09  Moritz Schulte  <moritz@duesseldorf.ccc.de>

	* lib.h: Fix pointer arg.
	* lib.c (dir_entries_get): Likewise.
	* lib.c (dir_entries_get): Fix typo.
	(dir_entries_get): Change type of data_size to size_t.
	* node.c (node_entries_get): Change type of dirent_data_size to
	size_t.

2002-12-08  Moritz Schulte  <moritz@duesseldorf.ccc.de>

	* BUGS: Remove the memory-leak bug.
	* lib.c: Include <sys/mman.h>.
	* node.c: Include <sys/mman.h>.
	(node_entries_get): munmap dirent_data as returned by
	dir_entries_get.
	(node_entries_get): New variable: int dirent_data_size.
	* lib.c (dir_entries_get): New argument: int *dirent_data_size.
	(dir_entries_get): Do not forget to munmap DATA if something goes
	wrong.
	* lib.h: Update dir_entries_get declaration.
	
	* node.c (node_create_root): call lnode_destroy, if node_create
	failed, not if lnode_create failed.  Reported by Richard Smith.

  Copyright 2002, 2003 Free Software Foundation, Inc.
  Copying and distribution of this file, with or without modification, are